# oi_checker

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.html  README.md  build.rs  config_default.toml  program-flow.md
example/: accepted.cpp  data_generator.py  tested.cpp  tested_ac.cpp  tested_tle.cpp  tested_tle_wa.cpp  tested_wa.cpp
favicon/: favicon.rc
packing/windows/: build.bat  setup.iss
src/: checker_error.rs  clean_files.rs  compilation.rs  config.rs  diff_tool.rs  dyn_formatting.rs  filter.rs  launch.rs  logger.rs  logging.rs  main.rs  os_lib.rs  path_lib.rs  prelude.rs  util.rs
src/config/: cf_parsing.rs  cla_parsing.rs
src/launch/: diff_tool.rs  filter.rs
state_diagrams/: launch_suite.mmd  overview.mmd
