[package]
name = "oi_checker"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.5"
toml = "0.6.0"
serde = { version = "1.0.152", features = ["default", "derive"] }
clap = "4.1.4"
threadpool = "1.8.1"
dyn_formatting = "3.0.0"
once_cell = "1.17.0"

[build-dependencies]
embed-resource = "1.8.0"
